--- a/apk/res/values-bn/strings.xml
+++ b/apk/res/values-bn/strings.xml
@@ -196,14 +196,10 @@
     <string name="wheelchair_pushes_lowercase_label" msgid="8919337990806379687">"হুইলচেয়ার পুশ করা সংক্রান্ত ডেটা"</string>
     <string name="wheelchair_pushes_read_content_description" msgid="157304610943976471">"হুইলচেয়ার পুশ করা সংক্রান্ত ডেটা দেখুন"</string>
     <string name="wheelchair_pushes_write_content_description" msgid="2745600707106818641">"হুইলচেয়ার পুশ করা সংক্রান্ত ডেটা এডিট করুন"</string>
-    <!-- no translation found for activity_intensity_uppercase_label (8718366426053335611) -->
-    <skip />
-    <!-- no translation found for activity_intensity_lowercase_label (4260366013498161858) -->
-    <skip />
-    <!-- no translation found for activity_intensity_read_content_description (5503681098610026279) -->
-    <skip />
-    <!-- no translation found for activity_intensity_write_content_description (4843212785611055496) -->
-    <skip />
+    <string name="activity_intensity_uppercase_label" msgid="8718366426053335611">"কত অ্যাক্টিভিটি করা হয়েছে তার ডেটা"</string>
+    <string name="activity_intensity_lowercase_label" msgid="4260366013498161858">"কত অ্যাক্টিভিটি করা হয়েছে তার ডেটা"</string>
+    <string name="activity_intensity_read_content_description" msgid="5503681098610026279">"কত অ্যাক্টিভিটি করা হয়েছে তার ডেটা দেখুন"</string>
+    <string name="activity_intensity_write_content_description" msgid="4843212785611055496">"কত অ্যাক্টিভিটি করা হয়েছে তার ডেটা এডিট করুন"</string>
     <string name="basal_metabolic_rate_uppercase_label" msgid="4802351493928086473">"স্বাভাবিক অবস্থায় মেটাবলিক রেটের ডেটা"</string>
     <string name="basal_metabolic_rate_lowercase_label" msgid="7195596626083893231">"স্বাভাবিক অবস্থায় মেটাবলিক রেটের ডেটা"</string>
     <string name="basal_metabolic_rate_read_content_description" msgid="5583222212705234907">"স্বাভাবিক অবস্থায় মেটাবলিক রেট সংক্রান্ত ডেটা দেখুন"</string>
@@ -1137,6 +1133,24 @@
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"অ্যাপ স্টোরে দেখুন"</string>
     <string name="select_all" msgid="837499881590001166">"সবকটি বেছে নিন"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"কানেক্ট করা অ্যাপ Health Connect থেকে এই ডেটা আর পড়তে পারবে না"</string>
+    <!-- no translation found for a11y_checked (3685413382346589880) -->
+    <skip />
+    <!-- no translation found for a11y_unchecked (6258943223981886207) -->
+    <skip />
+    <!-- no translation found for a11y_map_description (4992907698581164434) -->
+    <skip />
+    <!-- no translation found for a11y_next_day (7298174378837366410) -->
+    <skip />
+    <!-- no translation found for a11y_next_week (6692230156318350735) -->
+    <skip />
+    <!-- no translation found for a11y_next_month (4462534553687997396) -->
+    <skip />
+    <!-- no translation found for a11y_previous_day (2529677154858456085) -->
+    <skip />
+    <!-- no translation found for a11y_previous_week (2992971531628685405) -->
+    <skip />
+    <!-- no translation found for a11y_previous_month (3304373968190750755) -->
+    <skip />
     <string name="all_data_selected_deletion_confirmation_dialog" msgid="2103387413531373305">"সব ডেটা স্থায়ীভাবে মুছে দিতে চান?"</string>
     <string name="some_data_selected_deletion_confirmation_dialog" msgid="2466281529240054537">"বেছে নেওয়া ডেটা স্থায়ীভাবে মুছে দিতে চান?"</string>
     <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"<xliff:g id="APP_NAME">%s</xliff:g> সম্পর্কিত সব ডেটা স্থায়ীভাবে মুছে দিতে চান?"</string>
