--- a/apk/res/values-en-rCA/strings.xml
+++ b/apk/res/values-en-rCA/strings.xml
@@ -1133,6 +1133,15 @@
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"See on app store"</string>
     <string name="select_all" msgid="837499881590001166">"Select all"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Connected apps will no longer be able to read this data from Health Connect"</string>
+    <string name="a11y_checked" msgid="3685413382346589880">"Checked"</string>
+    <string name="a11y_unchecked" msgid="6258943223981886207">"Not checked"</string>
+    <string name="a11y_map_description" msgid="4992907698581164434">"Exercise map route available"</string>
+    <string name="a11y_next_day" msgid="7298174378837366410">"Next day"</string>
+    <string name="a11y_next_week" msgid="6692230156318350735">"Next week"</string>
+    <string name="a11y_next_month" msgid="4462534553687997396">"Next month"</string>
+    <string name="a11y_previous_day" msgid="2529677154858456085">"Previous day"</string>
+    <string name="a11y_previous_week" msgid="2992971531628685405">"Previous week"</string>
+    <string name="a11y_previous_month" msgid="3304373968190750755">"Previous month"</string>
     <string name="all_data_selected_deletion_confirmation_dialog" msgid="2103387413531373305">"Permanently delete all data?"</string>
     <string name="some_data_selected_deletion_confirmation_dialog" msgid="2466281529240054537">"Permanently delete selected data?"</string>
     <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"Permanently delete all <xliff:g id="APP_NAME">%s</xliff:g> data?"</string>
