--- a/apk/res/values-ml/strings.xml
+++ b/apk/res/values-ml/strings.xml
@@ -196,14 +196,10 @@
     <string name="wheelchair_pushes_lowercase_label" msgid="8919337990806379687">"വീൽചെയർ പുഷുകൾ"</string>
     <string name="wheelchair_pushes_read_content_description" msgid="157304610943976471">"വീൽചെയർ പുഷുകൾ സംബന്ധിച്ച ഡാറ്റ റീഡ് ചെയ്യുക"</string>
     <string name="wheelchair_pushes_write_content_description" msgid="2745600707106818641">"വീൽചെയർ പുഷുകൾ സംബന്ധിച്ച ഡാറ്റ റൈറ്റ് ചെയ്യുക"</string>
-    <!-- no translation found for activity_intensity_uppercase_label (8718366426053335611) -->
-    <skip />
-    <!-- no translation found for activity_intensity_lowercase_label (4260366013498161858) -->
-    <skip />
-    <!-- no translation found for activity_intensity_read_content_description (5503681098610026279) -->
-    <skip />
-    <!-- no translation found for activity_intensity_write_content_description (4843212785611055496) -->
-    <skip />
+    <string name="activity_intensity_uppercase_label" msgid="8718366426053335611">"ആക്റ്റിവിറ്റിയുടെ തീവ്രത"</string>
+    <string name="activity_intensity_lowercase_label" msgid="4260366013498161858">"ആക്റ്റിവിറ്റിയുടെ തീവ്രത"</string>
+    <string name="activity_intensity_read_content_description" msgid="5503681098610026279">"ആക്റ്റിവിറ്റി തീവ്രതയുടെ ഡാറ്റ വായിക്കുക"</string>
+    <string name="activity_intensity_write_content_description" msgid="4843212785611055496">"ആക്റ്റിവിറ്റിയുടെ തീവ്രതയുടെ ഡാറ്റ രേഖപ്പെടുത്തുക"</string>
     <string name="basal_metabolic_rate_uppercase_label" msgid="4802351493928086473">"അടിസ്ഥാന മെറ്റാബോളിക് നിരക്ക്"</string>
     <string name="basal_metabolic_rate_lowercase_label" msgid="7195596626083893231">"അടിസ്ഥാന മെറ്റാബോളിക് നിരക്ക്"</string>
     <string name="basal_metabolic_rate_read_content_description" msgid="5583222212705234907">"അടിസ്ഥാന മെറ്റാബോളിക് നിരക്ക് സംബന്ധിച്ച ഡാറ്റ റീഡ് ചെയ്യുക"</string>
@@ -1137,6 +1133,24 @@
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"ആപ്പ് സ്‌റ്റോറിൽ കാണുക"</string>
     <string name="select_all" msgid="837499881590001166">"എല്ലാം തിരഞ്ഞെടുക്കുക"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"കണക്‌റ്റ് ചെയ്‌തിട്ടുള്ള ആപ്പുകൾക്ക് ഇനി Health Connect-ൽ നിന്ന് ഈ ഡാറ്റ വായിക്കാനാകില്ല"</string>
+    <!-- no translation found for a11y_checked (3685413382346589880) -->
+    <skip />
+    <!-- no translation found for a11y_unchecked (6258943223981886207) -->
+    <skip />
+    <!-- no translation found for a11y_map_description (4992907698581164434) -->
+    <skip />
+    <!-- no translation found for a11y_next_day (7298174378837366410) -->
+    <skip />
+    <!-- no translation found for a11y_next_week (6692230156318350735) -->
+    <skip />
+    <!-- no translation found for a11y_next_month (4462534553687997396) -->
+    <skip />
+    <!-- no translation found for a11y_previous_day (2529677154858456085) -->
+    <skip />
+    <!-- no translation found for a11y_previous_week (2992971531628685405) -->
+    <skip />
+    <!-- no translation found for a11y_previous_month (3304373968190750755) -->
+    <skip />
     <string name="all_data_selected_deletion_confirmation_dialog" msgid="2103387413531373305">"എല്ലാ ഡാറ്റയും ശാശ്വതമായി ഇല്ലാതാക്കണോ?"</string>
     <string name="some_data_selected_deletion_confirmation_dialog" msgid="2466281529240054537">"തിരഞ്ഞെടുത്ത ഡാറ്റ ശാശ്വതമായി ഇല്ലാതാക്കണോ?"</string>
     <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"എല്ലാ <xliff:g id="APP_NAME">%s</xliff:g> ഡാറ്റയും ശാശ്വതമായി ഇല്ലാതാക്കണോ?"</string>
