--- a/apk/res/values-sk/strings.xml
+++ b/apk/res/values-sk/strings.xml
@@ -116,7 +116,7 @@
     <string name="history_read_medical_combined_request_title" msgid="1262267962861942478">"Prístup k minulým údajom o kondícii a zdraví"</string>
     <string name="history_read_medical_combined_request_description" msgid="7550922315652791771">"Povoľte tejto aplikácii prístup k údajom pridaným do <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
     <string name="history_read_medical_combined_request_description_fallback" msgid="3567968660826834911">"Povoľte tejto aplikácii prístup k všetkým minulým údajom"</string>
-    <string name="history_read_combined_request_title" msgid="9023811767370482028">"Prístup k minulým dátam"</string>
+    <string name="history_read_combined_request_title" msgid="9023811767370482028">"Prístup k minulým údajom"</string>
     <string name="history_read_combined_request_description" msgid="1437787086896636484">"Povoľte tejto aplikácii prístup k údajom Dát o zdraví pridaným do <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
     <string name="history_read_combined_request_description_fallback" msgid="4974756796396067521">"Povoľte tejto aplikácii prístup k všetkým minulým údajom Dát o zdraví"</string>
     <string name="history_read_medical_combined_request_footer" msgid="5301940225768076844">"<xliff:g id="APP_NAME">%1$s</xliff:g> už má prístup k minulým údajom vo vašich zdravotných záznamoch"</string>
@@ -132,7 +132,7 @@
     <string name="history_read_medical_access_title" msgid="1375462150672418692">"Prístup k minulým údajom o kondícii a zdraví"</string>
     <string name="history_read_medical_access_description" msgid="5615959269427106141">"Povoľte tejto aplikácii prístup k údajom pridaným do <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
     <string name="history_read_medical_access_description_fallback" msgid="3888547064992673535">"Povoľte tejto aplikácii prístup k všetkým minulým údajom"</string>
-    <string name="history_read_access_title" msgid="870048398702887144">"Prístup k minulým dátam"</string>
+    <string name="history_read_access_title" msgid="870048398702887144">"Prístup k minulým údajom"</string>
     <string name="history_read_access_description" msgid="800722432229526128">"Povoľte tejto aplikácii prístup k údajom Dát o zdraví pridaným do <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
     <string name="history_read_access_description_fallback" msgid="4151538305657852010">"Povoľte tejto aplikácii prístup k všetkým minulým údajom Dát o zdraví"</string>
     <string name="history_read_medical_access_read_warning" msgid="8878271647163400440">"Momentálne sa nečítajú žiadne údaje o kondícii, pretože <xliff:g id="APP_NAME">%1$s</xliff:g> nemá povolenia na čítanie"</string>
@@ -196,14 +196,10 @@
     <string name="wheelchair_pushes_lowercase_label" msgid="8919337990806379687">"potlačenia invalidného vozíka"</string>
     <string name="wheelchair_pushes_read_content_description" msgid="157304610943976471">"Čítanie údajov o potlačeniach invalidného vozíka"</string>
     <string name="wheelchair_pushes_write_content_description" msgid="2745600707106818641">"Zapisovanie údajov o potlačeniach invalidného vozíka"</string>
-    <!-- no translation found for activity_intensity_uppercase_label (8718366426053335611) -->
-    <skip />
-    <!-- no translation found for activity_intensity_lowercase_label (4260366013498161858) -->
-    <skip />
-    <!-- no translation found for activity_intensity_read_content_description (5503681098610026279) -->
-    <skip />
-    <!-- no translation found for activity_intensity_write_content_description (4843212785611055496) -->
-    <skip />
+    <string name="activity_intensity_uppercase_label" msgid="8718366426053335611">"Intenzita aktivity"</string>
+    <string name="activity_intensity_lowercase_label" msgid="4260366013498161858">"intenzita aktivity"</string>
+    <string name="activity_intensity_read_content_description" msgid="5503681098610026279">"Čítať intenzitu aktivity"</string>
+    <string name="activity_intensity_write_content_description" msgid="4843212785611055496">"Zapisovať intenzitu aktivity"</string>
     <string name="basal_metabolic_rate_uppercase_label" msgid="4802351493928086473">"Bazálny metabolizmus"</string>
     <string name="basal_metabolic_rate_lowercase_label" msgid="7195596626083893231">"bazálny metabolizmus"</string>
     <string name="basal_metabolic_rate_read_content_description" msgid="5583222212705234907">"Čítanie údajov o bazálnom metabolizme"</string>
@@ -1137,6 +1133,24 @@
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Zobraziť v obchode s aplikáciami"</string>
     <string name="select_all" msgid="837499881590001166">"Vybrať všetko"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Pripojené aplikácie už nebudú môcť čítať tieto údaje z Dát o zdraví"</string>
+    <!-- no translation found for a11y_checked (3685413382346589880) -->
+    <skip />
+    <!-- no translation found for a11y_unchecked (6258943223981886207) -->
+    <skip />
+    <!-- no translation found for a11y_map_description (4992907698581164434) -->
+    <skip />
+    <!-- no translation found for a11y_next_day (7298174378837366410) -->
+    <skip />
+    <!-- no translation found for a11y_next_week (6692230156318350735) -->
+    <skip />
+    <!-- no translation found for a11y_next_month (4462534553687997396) -->
+    <skip />
+    <!-- no translation found for a11y_previous_day (2529677154858456085) -->
+    <skip />
+    <!-- no translation found for a11y_previous_week (2992971531628685405) -->
+    <skip />
+    <!-- no translation found for a11y_previous_month (3304373968190750755) -->
+    <skip />
     <string name="all_data_selected_deletion_confirmation_dialog" msgid="2103387413531373305">"Chcete natrvalo odstrániť všetky údaje?"</string>
     <string name="some_data_selected_deletion_confirmation_dialog" msgid="2466281529240054537">"Chcete natrvalo odstrániť vybrané údaje?"</string>
     <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"Chcete natrvalo odstrániť všetky údaje aplikácie <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
